api-connect/sample-api-gateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api-gateway
  namespace: cloud-connect
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 32k;
      large_client_header_buffers 4 128k;
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  ingressClassName: ext-general
  rules:
  - host: dev-cloud-connect.opusxenta.dev
    http:
      paths:
      - path: /api/v1/callback
        pathType: Prefix
        backend:
          service:
            name: sample-api-gateway
            port:
              number: 3010
